--- a/programe1-1.html
+++ b/programe1-1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>CIT 160 first program</title>
     <meta charset="UTF-8" />
   </head>
+
   <body>
     <h1>My First JavaScript</h1>
 
