--- a/javascript study/34. are variables, declared with the var keyword.html
+++ b/javascript study/34. are variables, declared with the var keyword.html
@@ -11,9 +11,9 @@
     <p id="demo"></p>
 
     <script>
-      var x = 5;
-      var y = 6;
-      var z = x + y;
+      var x = 5; // let or const has to be used and var is old
+      var y = 6;  // let or const has to be used and var is old
+      var z = x + y;  // let or const has to be used and var is old
       document.getElementById("demo").innerHTML = "The value of z is: " + z;
     </script>
   </body>
