--- a/javascript study/39.A declaration can span multiple lines.html
+++ b/javascript study/39.A declaration can span multiple lines.html
@@ -12,7 +12,7 @@
 <p id="demo"></p>
 
 <script>
-var person = "John Doe",
+const person = "John Doe",
 carName = "Volvo",
 price = 200;
 document.getElementById("demo").innerHTML = carName;
