--- a/javascript study/41.If you re-declare a JavaScript variable, it will not lose its value..html
+++ b/javascript study/41.If you re-declare a JavaScript variable, it will not lose its value..html
@@ -11,8 +11,8 @@
         <p id="demo"></p>
         
         <script> 
-        var carName = "volvo" ;
-        var carName ;
+        let carName = "volvo" ;
+        let carName ;
         document.getElementById("demo").innerHTML = carName;
         </script>
         
