--- a/javascript study/43.The result of adding jon and doe.html
+++ b/javascript study/43.The result of adding jon and doe.html
@@ -13,7 +13,7 @@
             <p id="demo"></p>
             
             <script>
-            var x = "john" + " " + "doe";
+            let x = "john" + " " + "doe";
             document.getElementById("demo").innerHTML = x;
             </script>
             
