--- a/javascript study/44.If you put a number in quotes, the rest of the numbers will be treated as strings, and concatenated.html
+++ b/javascript study/44.If you put a number in quotes, the rest of the numbers will be treated as strings, and concatenated.html
@@ -12,7 +12,7 @@
             <p id="demo"></p>
             
             <script>
-            var x = 2 + 3 + "5";
+            const x = 2 + 3 + "5";
             document.getElementById("demo").innerHTML = x;
             </script>
             
