--- a/javascript study/45.The dollar sign is treated as a letter in JavaScript names.html
+++ b/javascript study/45.The dollar sign is treated as a letter in JavaScript names.html
@@ -11,8 +11,8 @@
             <p id="demo"></p>
             
             <script>
-            var $ = 2;
-            var $myMoney = 5;
+            let $ = 2;
+            let $myMoney = 5;
             document.getElementById("demo").innerHTML = $ + $myMoney;
             </script>
             
