--- a/PoundsToKilograms4.html
+++ b/PoundsToKilograms4.html
@@ -24,15 +24,15 @@
 
               //Input
               function poundsToKilograms() {
-                let text = (document.getElementById("pounds").value); 
+                let text = document.getElementById("pounds").value; 
                 // Processing
                 let pounds = parseFloat(text);
                 let kilograms = 1 * 0.45359237; 
                 // output
                 document.getElementById("output").textContent =         
-                   `${kilograms.tofixed(1)}` ;
+                   `${kilograms.tofixed (1)}` ;
                 }
-
+             
       </script>
 
     <footer>
