--- a/poundsToKilograms2.html
+++ b/poundsToKilograms2.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <h3>Convert Pounds to Kilograms</h3>
-        <label>pounds: <input type="text" id="number1" /></label>
+        <label>pounds: <input type="text" id="pounds" /></label>
        
         <label><button onclick="multiplyBy()">Convert</button></label>
         <hr />
@@ -24,6 +24,6 @@
     <footer>
       &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
-    <script src="js/poundsTokilograms3.js" defer></script>
+    <script src="js/poundTokilograms5.js" defer></script>
   </body>
 </html>
