--- a/poundsToKilograms.html
+++ b/poundsToKilograms.html
@@ -16,7 +16,7 @@
       <h3>Convert</h3>
       <label>pounds: <input type="text" id="pounds" /></label>
      
-      <label><button onclick="poundsToKilograms()">Convert</button></label>
+      <label><button onclick="poundsToKilograms()">Convert to kg</button></label>
       <hr />
       <p><span id="output"></span></p>
     </main>
