--- a/poundsToKilograms.html
+++ b/poundsToKilograms.html
@@ -23,7 +23,7 @@
     <footer>
       &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
-    <script src="js/poundsTokilograms.js" defer></script>
+    <script src="poundsTokilograms.js" defer></script>
   
   </body>
 </html>
