--- a/poundToKilograms5.html
+++ b/poundToKilograms5.html
@@ -13,14 +13,14 @@
 <main>
 <h3>Convert Pounds to Kilograms</h3>
 <label>Enter Amount in Pounds:<input type="text" id="pounds" /></label>
-<label
-><button type="button" onclick="poundsToKilograms()">
+<label></label> <button onclick="poundsToKilograms()">Convert </button></label>
 Convert Numbers
 </button></label
 >
 <hr />
 <p>output:<span id="output"></span></p>
 </main>
+
 <script>
 // round the display answer to one decimal and label the output, e.g., 50.6 Kilograms
 // program should correctly hand REAL NUMBERS (parsefloat) such as 160.5. This input should return and display 72.8 kilograms a round to one decimal answer
@@ -31,9 +31,10 @@ let text = document.getElementById("pounds").value;
 // processing
 let pounds = parseFloat(text);
 //conversion factor from pounds to kilograms
-let kilograms = 1 * 0.45359237;
+let kilograms = pounds * 0.45359237;
 //output
-document.getElementById("output").textContent = `${kilograms.tofixed(1)}` + Kilograms;}
+document.getElementById("output").textContent = Kilograms;
+
 </script>
 <footer>&copy;20 &bull; Debra Jones &bull; BYU-Idaho &bull; CIT 160</footer>
 </body>
