--- a/template.html
+++ b/template.html
@@ -1,73 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>CIT 160 Add Two Numbers</title>
-    <meta charset="UTF-8" />
-    <style>
-      body {
-        text-align: center;
-      }
-      header,
-      footer {
-        background-color: #000;
-        color: #fff;
-        padding: 10px;
-      }
+<!DOCTYPE HTML>
+<html lang="en-us">
+<head>
+<meta charset="utf-8">
+<title>Title</title>
 
-      footer {
-        font-size: 13px;
-        letter-spacing: 1.5pt;
-      }
+<script>
+/* Input: 
+ * Processing: 
+ * Output: 
+ */
+function main() {
 
-      h1,
-      h2 {
-        margin: 0;
-      }
 
-      h2,
-      #currentdate {
-        color: yellow;
-      }
+    // Determine the output and show it to the user.
+    document.getElementById('outputDiv').innerHTML = result ;
+}
+</script>
+</head>
 
-      main {
-        margin: 10px auto;
-        border: 1px solid #999;
-        padding: 10px;
-        max-width: 500px;
-        background-color: #abe;
-        box-shadow: 0 0 30px;
-      }
-
-      h3 {
-        font-size: 24px;
-        margin: 0 0 15px 0;
-        border-bottom: 1px solid #333;
-        padding: 0;
-      }
-
-      label {
-        display: block;
-        margin: 5px;
-      }
-    </style>
-  </head>
-
-  <body>
-    <header>
-      <h1>Week 3: Add Two Numbers</h1>
-      <h2>Thanush Ganesh</h2>
-    </header>
-
-    <main>
-      <h3>Add Two Numbers</h3>
-      <label>Enter Number One: <input type="text" id="number1" /></label>
-      <label>Enter Number Two: <input type="text" id="number2" /></label>
-      <label><button onclick="addNumbers()">Add Numbers</button></label>
-      <hr />
-      <p><span id="output"></span></p>
-    </main>
-    <footer>
-      &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
-    </footer>
-  </body>
+<body>
+<p>input</p><br> 
+<button type="button" onclick="">Click</button>  
+<div id="outputDiv"></div>  
+</body>
 </html>
