--- a/roundcylinder2.html
+++ b/roundcylinder2.html
@@ -77,7 +77,7 @@ function volume() {
 
 //Output
     // Display the volume to the user.
-    document.getElementById('outputDiv').innerHTML = volume;
+    document.getElementById('outputDiv').innerHTML = `${volume.toFixed (2)}`;
 }
  </script>
 
