--- a/employeesaftertaxpay.html
+++ b/employeesaftertaxpay.html
@@ -9,7 +9,7 @@
   }
   header,
   footer {
-    background-color: #000;
+    background-color: rgb(32, 51, 223);
     color: #fff;
     padding: 10px;
   }
@@ -48,6 +48,7 @@
   label {
     display: block;
     margin: 5px;
+    
   }
 </style>
  </head>
