--- a/roundcylinder2.html
+++ b/roundcylinder2.html
@@ -9,7 +9,7 @@
     }
     header,
     footer {
-      background-color: #000;
+      background-color: rgb(96, 121, 235);
       color: #fff;
       padding: 10px;
     }
@@ -31,17 +31,17 @@
 
     main {
       margin: 10px auto;
-      border: 1px solid #999;
+      border: 1px solid rgb(134, 134, 134);
       padding: 10px;
       max-width: 500px;
-      background-color: #abe;
+      background-color: rgb(50, 94, 224);
       box-shadow: 0 0 30px;
     }
 
     h3 {
       font-size: 24px;
       margin: 0 0 15px 0;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid rgb(35, 216, 223);
       padding: 0;
     }
 
