--- a/project js/quadric.html
+++ b/project js/quadric.html
@@ -95,7 +95,7 @@ function quadratic() {
     
 }
 /*
-A quadratic equation of the form y = ax2 + bx + c has two solutions, 
+A quadratic equation of the form y = ax2 + bx + c has two solutions
 also called roots, that may or may not be distinct and that may be real or complex.
 If you graph a quadratic equation, the roots are the locations where the equation crosses the x-axis.
  Figure 6-10 contains the graph of three different quadratic equations. 
