--- a/project js/5.20.rc2.html
+++ b/project js/5.20.rc2.html
@@ -8,7 +8,7 @@
 
 function volume() {
     // Get the radius and height from the user.
-    let r = parseFloat(document.getElementById('radiusInput').value);  // 
+    let r = parseFloat(document.getElementById('radiusInput').value);  /
     let h = parseFloat(document.getElementById('heightInput').value);
 
     // Compute the volume of the cylinder.
