--- a/java-scirpt-study/82.1.Switch-Statement.html
+++ b/java-scirpt-study/82.1.Switch-Statement.html
@@ -10,6 +10,7 @@
         
         <script>
             /*
+            there's no default on this particular switch box again because it's optional, if you want a default value or something you can do that it does it gives you flexibility as a programmer to write interesting code to solve problems.
 
             The getDay() method returns the weekday as a number between 0 and 6.
             (Sunday=0, Monday=1, Tuesday=2 ..)
