--- a/calculator.switch.html
+++ b/calculator.switch.html
@@ -12,11 +12,11 @@
       <h1>Week 6: Calculater</h1>
       <h2>Thanush Ganesh</h2>
     </header>
-    <main style="max-width: 550px;">
+    <main style="max-width: 400px;">
         <h3>Simple Calculator</h3>
         <input placeholder="Enter Number One" type="text" id="number1" size="15">
         <select name="arithmetic-operator" id="operator">
-            <option value="" >Operator</option>
+            <option value="" >Choose Operator</option>
             <option value="+">+</option>
             <option value="-">-</option>
             <option value="/">/</option>
