--- a/calculator.switch.html
+++ b/calculator.switch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <link href="css/style.css" rel="stylesheet" />
-    <title>Simple Calc</title>
+    <title>Simple Calculation</title>
   </head>
 
   <body>
