--- a/calculator.switch.html
+++ b/calculator.switch.html
@@ -38,7 +38,7 @@
     let userAnswer = parseFloat(document.getElementById('answer').value);
     let correctAnswer;
 
-    //PROCESSING = Using switch statement to verify which of the arithmetic operators 
+    //PROCESSING = Using switch statement to verify = which of the arithmetic operators 
     //were selected and calculates the answer
     switch (operator) {
         case '+':
