--- a/footwear.html
+++ b/footwear.html
@@ -41,10 +41,10 @@ anything else = shoes
  */
       function clothingLogic() {
         // Get the user input from a text field.
-        var text = document.getElementById("weather").value;
+        let text = document.getElementById("weather").value;
 
         // Choose a message
-        var message;
+        let message;
         if (text == "hot") {
           message = "sandals";
         } else if (text == "rain") {
