--- a/calculater.html
+++ b/calculater.html
@@ -51,9 +51,9 @@
         }
 
         if (result == res) {
-          correct = "Correct ";
+          correct = "Correct 🏆 ";
         } else {
-          correct = "Incorrect ";
+          correct = "Incorrect 😢 ";
         }
 
         // notify the user if the answers they enter correct or wrong:
