--- a/footwear.html
+++ b/footwear.html
@@ -20,38 +20,15 @@
           <option value="snow">snow</option>
           <option value="unknown">unknown</option>
       </select>
-      <label><button onclick="footwear()">Get your shoes</button></label>
+      <label><button onclick="clothinglogic()">Get your shoes</button></label>
       <hr />
       <p><span id="output"></span></p>
     </main>
     <footer>
       &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
-    <script>
-function footwear() {
-    //INPUT - user selects weather using a dropdown menu
-    let shoes;
-    let weather = document.getElementById('weather-select').value;
-    //PROCESSING - program selects the appropriate footwear for the weather using switch
-    switch(weather) {
-        case "hot":
-            shoes = "sandals";
-            break;
-        case "rain":
-            shoes = "galoshes";
-            break;
-        case "snow":
-            shoes = "boots";
-            break;
-        case "unknown":
-            shoes = "shoes";
-            break;
-    }
-    //OUTPUT - displays the footwear for the weather
-    document.getElementById('output').innerHTML = `${shoes}`;
-}
-
-
-    </script>
-  </body>
+    
+    
+    <script src="js/footwear.js"></script>
+   
 </html>
