--- a/template2.html
+++ b/template2.html
@@ -22,5 +22,8 @@
     <footer>
       &copy;2020 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
+    <script>
+
+    </script>
   </body>
 </html>
