--- a/calculator2.html
+++ b/calculator2.html
@@ -46,7 +46,7 @@
       <div id="outputDiv"></div>
     </main>
 
-    <script src="js/calculator.js"></script>
+    <script src="calculator.js"></script>
     <footer>
       &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
