--- a/calculator2.html
+++ b/calculator2.html
@@ -19,7 +19,8 @@
         id="num1InputBox"
         size="25"
       />
-      <select name="arithmetic-operator" id="mathematicaloperator">
+
+      <select name="arithmetic-operator" id="mathematicaloperator" required>
         <option value="">select operator</option>
         <option value="-">-</option>
         <option value="+">+</option>
