--- a/calculator2.html
+++ b/calculator2.html
@@ -19,7 +19,7 @@
         id="num1InputBox"
         size="25"
       />
-
+     
       <select name="arithmetic-operator" id="mathematicaloperator" required>
         <option value="">select operator</option>
         <option value="-">-</option>
@@ -47,7 +47,7 @@
       <div id="outputDiv"></div>
     </main>
 
-    <script src="calculator.js"></script>
+    <script src="js/calculator.js"></script>
     <footer>
       &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
