--- a/newTemplate.html
+++ b/newTemplate.html
@@ -18,7 +18,10 @@
     <label for="anythinguser-select">Select the weather</label>
       <select name="anyoption user select" id="anythinguser-select">
           <option value="hot">hot</option>
-      </select>  
+      </select> 
+      <label><button onclick="clothingLogic()">Get Recommendation</button></label>
+      <hr/>
+      <p><span id="output"></span></p> 
 
           <input type="text" id="name" size="2" />
           <input type="text" id="userInputBox" size="1" />
@@ -57,7 +60,7 @@
       </script>
   
       <footer>
-          &copy;2021 &bull; Melisa &bull; BYU-Idaho &bull; CIT 160
+          &copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160
       </footer>
 </body>
 </html>
