--- a/footwear11.html
+++ b/footwear11.html
@@ -10,7 +10,7 @@
 <body>
     
    <header>
-    <h1>which shoes suitable for 4 fiffeent weather types</h1>
+    <h1>which shoes suitable for 3 Diffeent weather types</h1>
     <h2>Thanush Ganesh</h2>
    </header>
     <main>
