--- a/footware10.html
+++ b/footware10.html
@@ -60,7 +60,7 @@
       </script>
   
       <footer>
-          &copy;2021 &bull; Melisa &bull; BYU-Idaho &bull; CIT 160
+          &copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160
       </footer>
 </body>
 </html>
