--- a/discount.html
+++ b/discount.html
@@ -52,7 +52,7 @@ Thursday (4)	 72.81	    77.18
         // To calculate final Total Amount
         totalAmount = subTotal * salesTax * 1.06;  // discount amount will be added after the 1 , 0.06 for other days in else statement.
         //Output will be total amount after discounts and taxes.
-        document.getElementById("outputDiv").innerHTML = totalAmount;
+        document.getElementById("outputDiv").innerHTML = '$' + totalAmount;
       }
     </script>
 
