--- a/discount.html
+++ b/discount.html
@@ -39,20 +39,23 @@ Thursday (4)	 72.81	    77.18
         // declare variables && assign variables
         let salesTax;
         let totalAmount;
-        let subTotal = parseFloat(document.getElementById("subtotalAmount").value );
+        let subTotal = parseFloat(
+          document.getElementById("subtotalAmount").value
+        );
         // Get day of week from the computer Automatically
         var dayOfWeek = new Date().getDay();
         // to check if today is Tuesday or Wednesday && To check if client buying more than 50 USD
         if (subTotal > 50 && (dayOfWeek == 2 || dayOfWeek == 3)) {
-        // 10% discount will be offered to clients who those buying on Tuesday and Wednesday
-          salesTax = 0.10;
+          // 10% discount will be offered to clients who those buying on Tuesday and Wednesday
+          salesTax = 0.1;
         } else {
           salesTax = 1;
         }
         // To calculate final Total Amount
-        totalAmount = subTotal * salesTax * 1.06;  // discount amount will be added after the 1 , 0.06 for other days in else statement.
+        totalAmount = subTotal * salesTax * 1.06; // discount amount will be added after the 1 , 0.06 for other days in else statement.
         //Output will be total amount after discounts and taxes.
-        document.getElementById("outputDiv").innerHTML = '$' + totalAmount;
+        document.getElementById("outputDiv").innerHTML =
+          "$" + totalAmount.toFixed(2);
       }
     </script>
 
@@ -62,14 +65,16 @@ Thursday (4)	 72.81	    77.18
     </header>
     <main>
       <h1>Limited Sale discount calculation</h1>
-      Customer Sub Total amount  $ :
-      <input type="text" id="subtotalAmount" placeholder= "Enter The Amount in USD" />
+      Customer Sub Total amount $ :
+      <input
+        type="text"
+        id="subtotalAmount"
+        placeholder="Enter The Amount in USD"
+      />
 
       <button type="button" onclick="calculateDiscount()">make Payment</button>
       <div id="outputDiv"></div>
     </main>
-    <footer>
-      &copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160
-    </footer>
+    <footer>&copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160</footer>
   </body>
 </html>
