--- a/discount.html
+++ b/discount.html
@@ -36,14 +36,18 @@ Wednesday (3)	 53.25	    50.80
 Thursday (4)	 72.81	    77.18
       */
       function calculateDiscount() {
+        // input
         // declare variables && assign variables
+        // Get day of week from the computer Automatically
+        var dayOfWeek = new Date().getDay();
         let salesTax;
+
+        //processing:
         let totalAmount;
         let subTotal = parseFloat(
           document.getElementById("subtotalAmount").value
         );
-        // Get day of week from the computer Automatically
-        var dayOfWeek = new Date().getDay();
+
         // to check if today is Tuesday or Wednesday && To check if client buying more than 50 USD
         if (subTotal > 50 && (dayOfWeek == 2 || dayOfWeek == 3)) {
           // 10% discount will be offered to clients who those buying on Tuesday and Wednesday
@@ -53,7 +57,9 @@ Thursday (4)	 72.81	    77.18
         }
         // To calculate final Total Amount
         totalAmount = subTotal * salesTax * 1.06; // discount amount will be added after the 1 , 0.06 for other days in else statement.
-        //Output will be total amount after discounts and taxes.
+
+        //output:
+        //will be total amount after discounts and taxes.
         document.getElementById("outputDiv").innerHTML =
           "$" + totalAmount.toFixed(2);
       }
