--- a/discount.html
+++ b/discount.html
@@ -39,7 +39,7 @@ Thursday (4)	 72.81	    77.18
         // input
         // declare variables && assign variables
         // Get day of week from the computer Automatically
-        var dayOfWeek = new Date().getDay();
+        let dayOfWeek = new Date().getDay();
         let salesTax;
 
         //processing:
