--- a/Template4.html
+++ b/Template4.html
@@ -79,6 +79,7 @@
     Passenger's height in inches:
     <input type="text" id="passengerBox" size="3" value="0" /><br />
     <button type="button" onclick="checkHeight()">Check Height to Ride for Autopia</button>
+    <button type="button" onclick="sleepOrWake()" size="10">Sleep In or Get Up</button>
     <div id="outputDiv"></div> 
     </main>
     <footer>
