--- a/find_a_range.html
+++ b/find_a_range.html
@@ -8,31 +8,47 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <h1>Week ?: Heading</h1>
+      <h2>Thanush Ganesh</h2>
+    </header>
+    <main>
+      <h1>Computes and returns a discounted purchase amount</h1>
+      <input
+        type="text"
+        id="purchaseBox"
+        placeholder="Enter The purchase price in USD"
+      />
+
+      <button type="button" onclick="getDiscountedAmount()">
+        discounted Amount
+      </button>
+      <div id="outputDiv"></div>
+    </main>
+    <footer>&copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160</footer>
     <script>
-      /*  Finding a Range
-Sometimes a computer program has a list of numerical ranges and must find the range that contains some value. Examples of this type of computing problem include:
-
-determining a person’s income tax rate from a list of income ranges and graduated tax rates
-determining a customer’s discount rate from a list of purchase ranges and discount rates
-determining a salesperson’s commission from a list of sales ranges and commission rates
-determining a student’s letter grade from a list of score ranges and letter grades
-For example, a company may offer discounts to its customers where the discount rate is based on the amount purchased according to this table.
-
-If the purchase                 And the                               Then the
-amount is greater              purchase amouis less than              discount
-thanor equal to                                                        rate is
-	                                                                                                                                       
-0	                          $300                                          	0%
-$300                      	$600	                                        2.0%
-$600                      	$1000	                                        2.5%
-$1000	                      ∞	                                            3.0%
-*/
-
       // Computes and returns a discounted purchase amount.
+      /*  Finding a Range
+      Sometimes a computer program has a list of numerical ranges and must find the range that contains some value. Examples of this type of computing problem include:
 
+      determining a person’s income tax rate from a list of income ranges and graduated tax rates
+      determining a customer’s discount rate from a list of purchase ranges and discount rates
+      determining a salesperson’s commission from a list of sales ranges and commission rates
+      determining a student’s letter grade from a list of score ranges and letter grades
+      For example, a company may offer discounts to its customers where the discount rate is based on the amount purchased according to this table.
+
+      If the purchase                 And the                               Then the
+      amount is greater              purchase amouis less than              discount
+      thanor equal to                                                        rate is
+
+      0	                          $300                                          	0%
+      $300                      	$600	                                        2.0%
+      $600                      	$1000	                                        2.5%
+      $1000	                      ∞	                                            3.0%
+      */
       function getDiscountedAmount() {
-        let purchase = parseInt(document.getElementById("purchaseBox").value);
         let discountedAmount;
+        let purchase = document.getElementById("purchaseBox").value;
         let discount;
 
         let rate = 0;
@@ -56,24 +72,5 @@ $1000	                      ∞	                                            3.0%
 
       document.getElementById("outputDiv").innerHTML = discountedAmount;
     </script>
-
-    <header>
-      <h1>Week ?: Heading</h1>
-      <h2>Thanush Ganesh</h2>
-    </header>
-    <main>
-      <h1>Computes and returns a discounted purchase amount</h1>
-      <input
-        type="text"
-        id="purchaseBox"
-        placeholder="Enter The purchase price in USD"
-      />
-
-      <button type="button" onclick="getDiscountedAmount()">
-        discounted Amount
-      </button>
-      <div id="outputDiv"></div>
-    </main>
-    <footer>&copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160</footer>
   </body>
 </html>
