--- a/Template4.html
+++ b/Template4.html
@@ -53,9 +53,7 @@
     <button type="button" onclick="sleepOrWake()" size="10">Sleep In or Get Up</button>
     <div id="outputDiv"></div> 
     </main>
-    <footer>
-      &copy;2021 &bull; Thanush  &bull; BYU-Idaho &bull; CIT 160
-    </footer>
+    <footer>&copy;2021 &bull; Thanush  &bull; BYU-Idaho &bull; CIT 160</footer>
      <script>
      function calculateDiscount() {
         // input
