--- a/projectjs/8.3.while-loop.html
+++ b/projectjs/8.3.while-loop.html
@@ -1,19 +1,22 @@
-/*i = 1;
-while (i < 3) {
-  alert(i);
-  i++;
-}
-alert("done");
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <h2>JavaScript = ( "For" Loop)</h2>
 
-/*
-while
+    <h1>Testing Loops</h1>
+    <div id="output"></div>
+    <hr />
+    <footer>&copy;2021 &bull; Thanush &bull; &bull; CIT</footer>
+    <script>
+      /*
+ while
 Use a while loop when:
 You need a simple counting loop; or
 You cannot use a simple counting loop, so you must use a sentinel controlled loop, the sentinel must be checked before executing the statements inside the loop.
-Template
-    while (condition) {
-        statements;
-    }
+
 1.reserve space in main memory for a variable named i and store the value 1 into it
 2.test if i is less than 3, which is true
 3.because i is less than 3, execute the statements in the body of the while loop
@@ -26,10 +29,23 @@ Template
 6.test if i is less than 3, which is false
 7.because i is not less than 3, skip the statements that are in the body of the loop and execute the statements that are written after the body of the loop
 
-*/
+        */
+      let outputstring = "";
+      let count = 0;
+      while (count < 10) {
+        console.log("Numbber:" + count);
+        outputstring += "Numbers:" + count + "<br>";
+        count++;
+      }
+      document.getElementById("output").innerHTML = outputstring;
 
-let count = 0;
-while (count < 10) {
-  console.log(count);
-  count++;
-}
+      /*
+  Template
+    while (condition) {
+        statements;
+    }
+  
+      */
+    </script>
+  </body>
+</html>
