--- a/java-scirpt-study/83.1.loop.html
+++ b/java-scirpt-study/83.1.loop.html
@@ -15,6 +15,7 @@ var text = "";
 var i;
 for (i = 0; i < cars.length; i++) {
   text += cars[i] + "<br>";
+  console.log( cars[i] + "<br>")
 }
 document.getElementById("demo").innerHTML = text;
 
