--- a/writeacodetomoverobot.html
+++ b/writeacodetomoverobot.html
@@ -84,7 +84,7 @@ For example:
       do {
         Robiie = prompt("Can i go to my destination ? Please reply yes "); // Get the user's name.
         response = prompt(
-          "if you want to print my jurney MAP" + Robiie + " - ok type yes?"
+          "if you want to print my jurney MAP=" + Robiie + " - Please type yes?"
         ); // Ask the user if that is really her name.
 
         outputstring += "hello" + " , " + Robiie + "  please reply yes below";
