--- a/writeacodetomoverobot.html
+++ b/writeacodetomoverobot.html
@@ -6,7 +6,7 @@
   <body>
     <h2>JavaScript = ( "For" Loop)</h2>
 
-    <h1>Testing Loops</h1>
+    <h1>writea codeto move robot</h1>
     <div id="output"></div>
     <hr />
     <footer>&copy;2021 &bull; Thanush &bull; &bull; CIT</footer>
