--- a/java-scirpt-study/83.11.loop-while.html
+++ b/java-scirpt-study/83.11.loop-while.html
@@ -19,8 +19,10 @@
     <footer>&copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160</footer>
     <script>
       outputstring = "";
+      let i = 1;
+      while (i < 5) {
+        i++;
 
-      for (let i = 1; 1 < 5; i++) {
         outputstring += i + "<br>";
         console.log(i);
       }
