--- a/sumOdds.html
+++ b/sumOdds.html
@@ -19,7 +19,7 @@
     <h1>Sum up the Odd Values from the nuber you choose</h1>
     Enter The number to sum up all the Odd values :
     <input type="text" id="numberBox" size="3" value="" /><br />
-    <button type="button" onclick="sumUpOddValue()" size="10">Sleep In or Get Up</button>
+    <button type="button" onclick="sumUpOddValue()" size="10">Result</button>
     <div id="output"></div> 
     </main>
     <footer>&copy;2021 &bull; Thanush  &bull; BYU-Idaho &bull; CIT 160</footer>
