--- a/fixedLoops.html
+++ b/fixedLoops.html
@@ -14,24 +14,129 @@
       <h2>Thanush Ganesh</h2>
     </header>
     <main>
-      <h1>Are you tall enough to drive on the Autopia?</h1>
+      <h1>fixed the loop problems</h1>
 
       <div id="display1"></div>
+      <div id="display2"></div>
+      <div id="display3"></div>
+      <div id="display4"></div>
     </main>
     <footer>&copy;2021 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160</footer>
     <script>
-      let part;
+      /*
       let output1;
+let i = 0;
+while (i < 2) {
+    output1 += `Part 1:${i}<br>`;
+}
+document.getElementById('display1').innerHTML = output1;
+
+output should be
+Part 1:0
+Part 1:1
+      */
+
+      output1 = "";
       let i = 0;
       while (i < 2) {
-        output1 += "Part" + 1 + "  : " + "$(i)" + "<br>";
-        console.log("Part" + 1 + "  : " + "$(i)" + "<br>");
+        output1 += `Part1:${i}<br>`; // part1 + ":" +
+        console.log(`Part1:${i}<br>`);
+        i++;
+        // console.log("Part" + i + ":" + 0 + "<br>");
+        // console.log("Part" + 1 + ":" + i + "<br>");
+        //output1 += "Part" + i + ":" + 0 + "<br>";
+        //output1 += "Part" + 1 + ":" + i + "<br>";
       }
+
       document.getElementById("display1").innerHTML = output1;
+      //////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+      /*
+      var output2;
+for (let j = 0; j > 3; j++) {
+  if (j !== 2) {
+    output2 += `Part 2:${j}, `;
+  }
+  else {
+    output2 += `Part 2:${j}`;
+  }  
+}
+document.getElementById('display2').textContent = output2;
+
+output should be
+Part 2:0, Part 2:1, Part 2:2
+      */
+      let output2;
+      output2 = "";
+
+      for (let j = 0; j < 3; j++) {
+        if (j !== 2) {
+          output2 += `Part 2:${j}, `;
+        } else {
+          output2 += `Part 2:${j}`;
+        }
+      }
+      document.getElementById("display2").textContent = output2;
+
+      ///////////////////////////////////////////////////////////////////////////////
+      /*
+      let output3;
+for (let k = 0, k < 4, k++) {
+  output3 += k + " ";
+}
+document.getElementById('display3').textContent = output3;
+
+output should be
+0 1 2 3 
+      */
+      let output3;
+      output3 = "";
+      for (let k = 0; k < 4; k++) {
+        output3 += k + " ";
+      }
+      document.getElementById("display3").textContent = output3;
 
       //output should be
-      //Part 1:0
-      //Part 1:1
+      //0 1 2 3
+
+      ///////////////////////////////////////////////////////////////////////////////////
+
+      /*
+      let balance = 1000;
+const rate = .10;
+let n = 30;
+for (let s = 0; s < n; s++)
+    interest = balance * rate;
+    balance += interest;
+document.getElementById('display4').textContent = balance;
+
+output should be
+15863.09
+      */
+
+      let balance = 1000;
+      let rate = 0.1;
+      let n = 30;
+
+      for (let s = 1; s < n; s++) {
+        let interest = balance * rate;
+        balance += interest;
+        console.log(balance);
+      }
+
+      document.getElementById("display4").textContent = balance;
+
+      //output should be
+      //15863.09
     </script>
   </body>
 </html>
+function futureValue() { let balance =
+parseFloat(document.getElementById('balance').value); let annualRate =
+parseFloat(document.getElementById('annualRate').value); let numMonths =
+parseInt(document.getElementById('months').value); let monthlyRate = annualRate
+/ 12; // For each month, compute the interest and add it to the balance. for
+(let month = 1; month <= numMonths; month++) { // Compute the interest for a
+month. let interest = balance * monthlyRate; // Round the interest to pennies.
+interest = Math.round(interest * 100) / 100; // Add the interest to the balance.
+balance += interest; console.log('Your balance after ' + numMonths + ' months
+will be $' + balance);
