--- a/forloop.html
+++ b/forloop.html
@@ -30,6 +30,12 @@ while (i < 3) {
 Write a for loop that uses only one variable and that counts from 12 down to 4 by twos.
 for (let i = 12; i >= 4; i -= 2) {   wrong
 
+  Write a for loop that uses only one variable and that counts from 12 down to 4 by twos.
+
+  *************************************
+  Write a for loop that uses only one variable and that counts from 1 to 8 by ones.
+  for(let i = 1 ; i< 9; i++)
+
   ----------------------------------------------------------------------------------------------------------
 Write a for loop that uses only one variable and that counts from 1 to 8 by ones. correct
 for (let i = 1; i < 9; i++) {
@@ -74,11 +80,10 @@ for (let i = 0;  i > 3;  i++) {
       // document.getElementById("demo").innerHTML = " number:" + count;
 
       outputstring = "";
-      let i = 0,
-        limit = 5;
-      while (i < limit) {
-        alert("Apple");
-        i += 2;
+      for (let i = 0; i > 3; i++) {
+        alert("Goodbye");
+
+        alert("Goodbye");
 
         console.log(i);
 
@@ -88,4 +93,3 @@ for (let i = 0;  i > 3;  i++) {
     </script>
   </body>
 </html>
-//for ( let i = 1 ; i < 9 ; i++){}
