--- a/fixedLoops.html
+++ b/fixedLoops.html
@@ -121,6 +121,14 @@ output should be
       }
 
       document.getElementById("display4").textContent = balance.toFixed(2);
+      /*
+      let i = 0;
+      while (i < 3); {    // semicolon after parentheses not needed
+        // valid statements (this is not the problem)
+        i++;
+      }
+
+      */
     </script>
   </body>
 </html>
