--- a/sumOdds.html
+++ b/sumOdds.html
@@ -45,7 +45,7 @@ function sumUpOddValue() {
         // declare outputstring to print out in inner html using GetdocumentlementById 
          
         let n = document.getElementById("numberBox").value;
-        let outputstring = "";
+        let outputstring = ""; // declare as string inorder to print in innerhtml
         let odd;
         let sum = 0; // assigning interger to sum.
         //processing:
